   * added sickle and scythe attack icons
   * added weapon-shop tent and oak tree
   * added automatic side-coloring of custom flags
   * new animations: troll whelp idle, young ogre idle, master at arms crossbow
     and defend
 * language and i18n:
   * updated translations: Czech, Danish, German, Italian, Japanese, Polish,
      Spanish, Swedish
 * units
   * added a wolf "monster"
 * WML engine
   * removed deprecated keys image_healing and image_halo_healing
   * empty user_description now remains empty unless generate_description set
     (bug 8522).
   * empty user_team_name remains empty (bug 9310).
   * set_variable has the key time=stamp now, to get a timestamp in milliseconds
   * move some terrain masks definition in [game_config]
   * made defense_weight work again for values > 0
   * fixed some minor bugs with "sighted" event, "die" event, and [kill]
   * now [allow_undo] should work as expected in sub-commands such as [then]
 * user interface:
   * fixed a lag in the path rendering when there is a lot of units
   * maps smaller than the screen are now shown centered on the screen
   * the movement hint now display a "(1)" turn to reach, where the unit
     will have no moves left (distance, village or ZoC)
   * fixed bug with the number of turns to reach when crossing several ZoC
   * allow to choose the direction from where attacking, even when you
     are just near the enemy unit.
   * ability to view a list of MP servers with the Join Game dialog
   * fixed blinking tooltips when clock is updated (bug #9209)
   * footsteps are now erased at the end of the unit's move
   * reduced "sea sickness" effect when scrolling at accelerated speed
   * allow to select item in menu with right-click
   * right-click outside of a cancelable dialog to close it
   * added experimental new background read comment before draw_background()
     in display.cpp
   * the movement hint use multiline, colors and bigger font to display