@@ -105,12 +105,12 @@
 #enddef
 
 #define TRAIT_HEALTHY
-# Units with trait Healthy heal at 4HP per turn when resting and get 3 more HP.
+# Units with trait Healthy get 3 more HP and can move and rest in the same turn.
 	[trait]
 	id=healthy
 	male_name= _ "healthy"
 	female_name= _ "female^healthy"
-	description= _ "Heals faster if resting"
+	description= _ "Can rest while moving"
                 [effect]
                 apply_to=hitpoints
                 increase_total=3
